Post-v2.16.0
---------------------


v2.16.0 - xx xxx xxxx
---------------------
   - Removed support for 1024-bit Diffie-Hellman key exchange, which is now
     considered unsafe.
   - Ingress Policing:
     * Rate limiting configuration now supports setting packet-per-second
       limits in addition to the previously configurable byte rate settings.
       This is not supported in the userspace datapath yet.
   - OVSDB:
     * Introduced new database service model - "relay".  Targeted to scale out
       read-mostly access (ovn-controller) to existing databases.
       For more information: ovsdb(7) and Documentation/topics/ovsdb-relay.rst
     * New command line options --record/--replay for ovsdb-server and
       ovsdb-client to record and replay all the incoming transactions,
       monitors, etc.  More datails in Documentation/topics/record-replay.rst.
     * The Python Idl class now has a cooperative_yield() method that can be
       overridden by an application that uses eventlet / gevent / asyncio with
       the desired yield method (e.g. {eventlet,gevent,asyncio}.sleep(0)) to
       prevent the application from being blocked for a long time while
       processing database updates.
   - In ovs-vsctl and vtep-ctl, the "find" command now accept new
     operators {in} and {not-in}.
   - Userspace datapath:
     * Auto load balancing of PMDs now partially supports cross-NUMA polling
       cases, e.g if all PMD threads are running on the same NUMA node.
     * Userspace datapath now supports up to 2^18 meters.
     * Added support for systems with non-contiguous NUMA nodes and core ids.
     * Added all-zero IP SNAT handling to conntrack. In case of collision,
       using ct(src=0.0.0.0), the source port will be replaced with another
       non-colliding port in the ephemeral range (1024, 65535).
     * Refactor lib/dpif-netdev.c to multiple header files.
     * Add avx512 implementation of dpif which can process non recirculated