@@ -1,5 +1,9 @@
 Post-v2.16.0
 ---------------------
+   - DPDK:
+     * EAL argument --socket-mem is no longer configured by default upon
+       start-up.  If dpdk-socket-mem and dpdk-alloc-mem are not specified,
+       DPDK defaults will be used.
 
 
 v2.16.0 - xx xxx xxxx
